# ar-tabletop

./: .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.md
sample/: chess.scene  cubes.scene  monkey.scene  space.scene
sample/boards/: chess.board
sample/models/: black_bishop.ply  black_king.ply  black_pawn.ply  cube.ply  fighter.ply  suzanne.ply  white_king.ply  white_knight.ply  white_pawn.ply  white_rook.ply
src/: CMakeLists.txt  boardwrap.cpp  boardwrap.h  calibration.cpp  calibration.h  denoising.cpp  denoising.h  filter.cpp  filter.h  filterdialog.cpp  filterdialog.h  framefetcher.cpp  framefetcher.h  genboarddialog.cpp  genboarddialog.h  genmarkerdialog.cpp  genmarkerdialog.h  graphics.cpp  graphics.h  main.cpp  mainwindow.cpp  mainwindow.h  matconv.cpp  matconv.h  message.cpp  message.h  pipeline.cpp  pipeline.h  scene.cpp  scene.h
src/gui/: calibrate.ui  filtering.ui  genboard.ui  genmarker.ui  window.ui
test/: BoardIgnoringMarkerFilterTest.cpp  CMakeLists.txt  SmoothingMarkerFilterTest.cpp
